# blvm-commons

./: .gitignore  CONTRIBUTING.md  Cargo.toml  DIRECTORY_STRUCTURE.md  README.md  SECURITY.md  SYSTEM_OVERVIEW.md  check_and_push_all.sh  trigger-prerelease.sh  versions.toml
.sqlx/: query-025e4d28d80190e0039fb10484838d202def45c191f00d112e2ca1be61d79d57.json  query-063875a7a97243d02a3c5f4ca04cb17fd1aacca5cd92bc9f080527b77e60444b.json  query-173ce17af5c82696d865c001e97198d404cc09eae0fd4c0c65ac60f8a255a3c1.json  query-30b5e0953b523f9d07482d36097584761e85d6f5bf4484b04dc1ddc21556a46b.json  query-3101f5c56738379010ffc22a289bc527ffc40d50c656e9783889669eaec2cb69.json  query-3218bed1734df15964c9f0f4d297a09c354f933cac80ba339c4db4928919c3a3.json  query-3861e519cf11e09ae3520ffdabe76a956a0ae5a47aae03823383f85e473bb5a8.json  query-494abaa4219c63ae8ef178a2490311544348ecdd3ce413cd0258e40edaa382ec.json  query-4cbb6e80ae85bcb27933bbf5833acb14b3dbb94cfe19f1a3bea6647bc2a70d06.json  query-54fc46fa3ec2efdcd96ec1a5dc0008643179e7b57f3673b5c1a9269bd25fd6af.json  query-59d398c1e3f197d4c0f9cedc5e501d69facaa9246e75fd163e46ed7f7ead7ac7.json  query-6538fcf247375895ced9356e0f3f594513c8820e3ddb07358acf505648216546.json  query-6c88cd348f65609b0922fff23c9888f9f0fd577d5b02ff8b6abcf1792f2b2141.json  query-7fb54391723f085bdd0ac2a1b55919fa1377c34478a78010f50b038614656274.json  query-868a25edbbc17c6d1ecf09d9396d24b524e9fe10a1ff0adaae4d85e10f755c50.json  query-8a01ff0b39ac8e5b802166dd933495dae1dc3016e5d4f56125527b2a41c15701.json  query-9253df286357bdcceaa38615e48d4be7486807b6dd22a2682dade2f6916fa0ee.json  query-9737804da48061e27762cf7d5a0a9881cc6cbfa1189f07fbf5482a4e69112171.json  query-9a03b69fe96660cae8ad2ff6fd6e4733f97f9a6655d9ee2976c327b4862b1d0a.json  query-9bef8c44cf3d7ec2fbe2f7e9493db6dc6f87319628b45388c3158b79db072c4f.json  query-9d7dfee06abcb9baa4d146b084649120a841d0be5afb53799d83653a89ebb06a.json  query-a09e5fdbbaa0862055fea42e8a6a97900b6a18396d9b6294c2797c214fc10d74.json  query-a0bc29c0488330208ea2a7e1cdc710710655b3ae0eb15d80b29512649c687d37.json  query-b02b5a21684bf3ec63027b289b50adff699488574591007c86b1101c9a1dd7e1.json  query-d19704a94719e2fa16b625af2fda4ccb670a6e19a6299604bba12d8b3ef225e0.json  query-d1d7704fc8fbad9bac1fe6e23c62f8fa31a5e60b248e8cc4b01e7882d624ace4.json  query-edb1c202f06921fb5e2eb1712d7766597be8e1e720403e1feb8d2397ac4fd796.json  query-f0c0e7e36885d4a134f3d9f8fb8cf26f380f635d494460e6272fa46a4cfa11e6.json
config/: README.md
deployment/: BITCOIN_CORE_COMPATIBILITY.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_PLAN.md  README.md  VALIDATION_REPORT.md  blvm  blvm.sh  config.sh  docker-compose.yml  health.sh  info.sh  install-archival-node.sh  install-blvm-node.sh  install-experimental-node.sh  install-governance-app.sh  install.sh  logs.sh  restart.sh  setup.sh  status.sh  uninstall.sh  update.sh
docs/: API_REFERENCE.md  ASYNC_ROUTING_ENHANCEMENTS.md  AUDIT_LOG_SYSTEM.md  BASE_IMPLEMENTATION_SIZE_ANALYSIS.md  BASE_VS_EXPERIMENTAL_BUILDS.md  BIP152_COMPACT_BLOCKS.md  BIP330_ERLAY.md  BLLVM_CLI_SUBCOMMANDS_PROPOSAL.md  BLLVM_DEVELOPMENT_ANALYSIS.md  BLLVM_DEVELOPMENT_SUMMARY.md  BTCDECODED_SYSTEM_REVIEW.md  BUILD_SYSTEM_COMPLETE_SUMMARY.md  BUILD_SYSTEM_FINAL_STATUS.md  BUILD_SYSTEM_UPDATES_SUMMARY.md  CI_SECURITY_AUDIT.md  COMMIT_DOCUMENTATION.md  COMMIT_MESSAGE.md  COMMONS_FILTERING_AND_PRUNING.md  COMPREHENSIVE_REVIEW_FINDINGS.md  CONFIGURATION.md  (+90 more)
(+98 files in other folders)
