[package]
name = "blvm-commons"
version = "0.1.0"
edition = "2021"
authors = ["BTCDecoded Contributors"]
license = "MIT"
description = "Bitcoin Commons governance enforcement - GitHub App for cryptographic governance across Bitcoin Commons repositories"
repository = "https://github.com/BTCDecoded/blvm-commons"

[dependencies]
# Protocol layer for Block and Transaction types
blvm-protocol = "0.1.3"
# Web framework
axum = "0.7"
tokio = { version = "1", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["trace"] }

# GitHub API
octocrab = "0.38"
jsonwebtoken = "9.2"

# Database
sqlx = { version = "0.8.1", features = ["postgres", "sqlite", "runtime-tokio-rustls", "chrono", "json", "migrate"] }
# Note: MySQL feature removed - not used, eliminates rsa 0.9.8 vulnerability

# Cryptography (Bitcoin-compatible)
secp256k1 = { version = "0.28", features = ["rand"] }
bitcoin = "0.31"
sha2 = "0.10"
hex = "0.4"

# Governance crypto primitives
blvm-sdk = "0.1.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
toml = "0.8"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }

# Configuration
config = "0.14"

# HTTP client
reqwest = { version = "0.12", features = ["json"] }

# Glob patterns
glob = "0.3"

# CLI
clap = { version = "4.4", features = ["derive"] }

# Random number generation
rand = "0.8"

# Nostr protocol
nostr-sdk = "0.27"

# OpenTimestamps (behind feature flag)
opentimestamps = { version = "0.1", optional = true }

# Lightning invoice parsing (bolt11)
lightning-invoice = "0.2"

# Additional dependencies for cross-layer validation
base64 = "0.21"
bytes = "1.11.1"  # RUSTSEC-2026-0007: align with blvm-node; axum/tower-http accept ^1.0
uuid = { version = "1.6", features = ["v4", "serde"] }
getrandom = "=0.2.17"  # Match blvm-protocol version
regex = "1.10"
async-trait = "0.1"

# Local development: Use [patch.crates-io] to override with local paths
# For production/CI, these patches are removed and crates.io versions are used
[patch.crates-io]
blvm-sdk = { path = "../blvm-sdk" }
blvm-protocol = { path = "../blvm-protocol" }
blvm-consensus = { path = "../blvm-consensus" }
blvm-node = { path = "../blvm-node" }

[features]
default = []
# Enable OpenTimestamps support
opentimestamps = ["dep:opentimestamps"]
# Enable PostgreSQL support
postgres = []

[[bin]]
name = "blvm-commons"
path = "src/main.rs"

[[bin]]
name = "key-manager"
path = "src/bin/key_manager.rs"

[[bin]]
name = "test-content-hash"
path = "src/bin/test_content_hash.rs"

[[bin]]
name = "test-content-hash-standalone"
path = "src/bin/test_content_hash_standalone.rs"

[[bin]]
name = "nostr-publisher"
path = "src/bin/nostr-publisher.rs"

[[bin]]
name = "governance-review-check-expired"
path = "src/bin/governance-review-check-expired.rs"

[[bin]]
name = "governance-report"
path = "src/bin/governance-report.rs"

[dev-dependencies]
tokio-test = "0.4"
mockito = "1.2"
wiremock = "0.6"
tempfile = "3.8"
async-trait = "0.1"
proptest = { version = "1.4", features = ["std"] }
insta = { version = "1.38", features = ["redactions"] }
smallvec = "1.11"
